[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scenes/Main/PlayerController.tscn" type="PackedScene" id=1]
[ext_resource path="res://Debug/Circle.gd" type="Script" id=2]
[ext_resource path="res://Scenes/World/World.gd" type="Script" id=4]

[sub_resource type="SpatialMaterial" id=1]
flags_unshaded = true
vertex_color_use_as_albedo = true
albedo_color = Color( 0, 1, 0.156863, 1 )

[sub_resource type="SpatialMaterial" id=2]
flags_unshaded = true
vertex_color_use_as_albedo = true
albedo_color = Color( 0, 1, 0.952941, 1 )

[sub_resource type="SpatialMaterial" id=3]
flags_unshaded = true
vertex_color_use_as_albedo = true
albedo_color = Color( 1, 0.772549, 0, 1 )

[node name="World" type="Spatial"]
script = ExtResource( 4 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="PlayerController" parent="." instance=ExtResource( 1 )]

[node name="Circle0" type="ImmediateGeometry" parent="."]
material_override = SubResource( 1 )
cast_shadow = 0
script = ExtResource( 2 )

[node name="Circle1" type="ImmediateGeometry" parent="."]
material_override = SubResource( 2 )
cast_shadow = 0
script = ExtResource( 2 )

[node name="Circle2" type="ImmediateGeometry" parent="."]
material_override = SubResource( 3 )
cast_shadow = 0
script = ExtResource( 2 )
